wip: improve auth

--- a/src/app/views/auth/components/login/login.component.html
+++ b/src/app/views/auth/components/login/login.component.html
@@ -1,4 +1,4 @@
-@if (user_access_token) {
+@if (user_access_token$ | async) {
   <a [routerLink]="['/users', 'playlists']" class="hover:text-gray-300 sm:px-4">
     profile
   </a>
